feat: 폰트 설정 추가

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,8 @@
 <!-- start custom head snippets -->
 
+<!-- Pretendard CDN -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
