--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,6 +13,9 @@ body {
   font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui,
     Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo',
     'Noto Sans KR', 'Malgun Gothic', sans-serif;
+
+  font-size: 14px;  
+  line-height: 1.4; 
 }
 
 h1, h2, h3, h4, h5, h6 {
